src/components/LBDashboard/WishList/ItemOverview.module.css
.item__navbar{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  background-color: #9dd425 !important;
  padding: 1.5rem 1.5rem !important; 
  margin: 0 !important;
}

.item__navbar-left{
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
}

.item__selector{
  width: 200px;
  background-color: #fff;
  border-radius: 5px;
  margin-right: 0.7rem;
  padding: 0.1rem 0.4rem 0.1rem 0.2rem;
  cursor: pointer;
}

.item__selector select{
  width: 100%;
  border: none;
  outline: none;
  font-size: 14px;
  cursor: pointer;
}

.item__button{
  background-color: rgb(190, 190, 190);
  padding: 0.2rem 0.5rem;
  border-radius: 5px;
  border: 1px solid black;
  cursor: pointer;
}

.item__button:hover{
  background-color: black;

  padding: 0.2rem 0.5rem;
  border-radius: 5px;
  border: 1px solid black;
  cursor: pointer;
  transition: all 0.3s ease;
}

.item__button p{
  font-family: sans-serif;
  color: #fff;
  font-size: 14px;
  padding: 0;
  margin: 0;
}

.item__navbar-right{
  display: flex;
  flex-direction: row;
  justify-content: flex-end;
  align-items: center;
  width: 100%;
  padding: 1rem 0 0;
}

.item__navbar-right h2{
  font-family: sans-serif;
  color: #000000;
  font-size: 14px;
  padding: 0;
  margin: 0;
}

.item__icons{
  padding-left: 0.5rem;
  margin: 0;
}

.item__nav-icon{
  margin-left: 1rem;
  font-size: 19px;
  margin-bottom: 0.2rem;
}

.item__nav-link{
  color: rgba(0, 0, 0) !important;
}

.item__overview {
  background-color: #e0e0e0;
  display: flex;
  justify-content: space-evenly;
  align-items: center;
  margin: 20px 40px 30px 40px;
  padding: 10px 0px 10px 0px;
  width: auto;
  height: auto;
}

.item__details-left {
  width: 50%;
  height: 100%;
  display: flex;
  flex-direction: column;
  align-items: center;
  padding: 2.5% 2.5% 1.5% 2.5%;
}

.item__listing-details--mobile {
  display: none;
}

.item__listing-details h1,
p {
  color: #000;
}

.item__images {
  width: 100%;
  margin-bottom: 2.5%;
}

.item__amenities {
  display: flex;
  justify-content: center;
  width: 100%;
  gap: 10px;
}

.item__amenities h2 {
  font-size: 16px;
  text-align: left;
  color: #060606;
  font-weight: bold;
}

.item__amenities div {
  display: flex;
  flex-direction: column;
  width: 100%;
}

.margin__left {
  margin-left: -1.3rem;
}

.err-message{
  color: red;
  font-size: 12px;
  margin-top: 5px;
  display: block;
  width: 50%;
}

.item__location {
  display: flex;
  width: 100%;
  height: 30px;
  margin: 2%;
  padding-left: 5%;
  margin-top: 5%;
}

.item__location img {
  width: 30px;
  height: 30px;
}

.item__location a {
  text-decoration: underline;
  cursor: pointer;
}

.item__icon {
  color: red;
  font-size: 1.3rem
}

.item__details-right {
  width: 50%;
  height: 100%;
  padding: 2.5%;
}

.item__rent {
  display: flex;
  flex-direction: row;
  align-items: flex-start;
  justify-content: space-evenly;
  gap: 10px;
}

.item__rent label {
  display: flex;
  width: 50%;
  flex-direction: column;
}

.item__form button {
  background: #13ae5c;
  color: white;
  padding: 10px;
  border-radius: 10px;
  border: none;
  cursor: pointer;
  transition: background 0.3s ease, transform 0.2s ease;
}

.item__form button:hover {
  background: #0f9a50;
  transform: scale(1.01);
}

.item__form button:active {
  transform: scale(0.99);
}
.item__rent input[type='date'] {
  border: 1px solid #ccc;
  margin-top: 2.5%;
  width: 100%;
}

.item__bidding {
  display: flex;
  flex-direction: column;
  align-items: flex-start;
}

.item__bidding label {
  display: flex;
  width: 50%;
  flex-direction: column;
}

.footer__icons {
  display: flex;
  justify-content: flex-end;
  gap: 10px;
}

.save__list {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-top: 2.5%;
}

.save__list button {
  background: #d1d1d1;
  padding: 2.5%;
  border-radius: 998px;
  border: none;
  width: 10%;
  display: flex;
  justify-content: center;
  min-width: 100px;
  height: 100%;
  gap: 10%;
  align-items: center;
  cursor: pointer;
  transition: background 0.3s ease, transform 0.2s ease;
}

.start__chat {
  display: flex;
  flex-direction: column;
  align-items: flex-end;
  margin-top: 2.5%;
}

.start__chat button {
  background: #d1d1d1;
  padding: 2.5%;
  border-radius: 998px;
  border: none;
  width: 33%;
  display: flex;
  justify-content: center;
  min-width: 200px;
  gap: 10%;
  align-items: center;
  cursor: pointer;
  transition: background 0.3s ease, transform 0.2s ease;
}

.saved__item {
  color: red;
}

@media screen and (max-width: 1200px) {
  .item__navbar{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: green;
    padding: 1.1rem 1rem  !important;
  }
  .item__nav-icon{
    margin-left: 0.5rem;
    font-size: 16px;
    margin-bottom: 0.25rem;
  }
  .item__navbar-right {
    justify-content: space-between;
    padding: 1rem 0 0;
  }
  .item__navbar-right h2{
    font-family: sans-serif;
    color: #000000;
    font-size: 12px;
    padding: 0;
    margin: 0.3rem 0 0;
  }
  .item__icons{
    padding-left: 0.2rem;
    margin: 0 0 0rem;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row !important;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
  }
}

@media screen and (max-width: 800px) {
  .item__navbar{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: green;
    padding: 1rem 2rem !important;
  }
  .item__navbar-right {
    justify-content: space-between;
    padding: 1rem 0 0;
  }
  .item__navbar-right h2{
    font-family: sans-serif;
    color: #000000;
    font-size: 12px;
    padding: 0;
    margin: 0.3rem 0 0;
  }
  .item__icons{
    padding-left: 0.2rem;
    margin: 0 0 0rem;
  }
  .item__nav-icon{
    margin-left: 0.8rem;
    font-size: 16px;
    margin-bottom: 0;
  }
  .navbar-nav {
    display: flex;
    flex-direction: row !important;
    padding-left: 0;
    margin-bottom: 0;
    list-style: none;
  }
  .item__overview {
    flex-direction: column;
    align-items: center;
  }
  .item__details-left {
    width: 98%;
  }
  .item__listing-details--mobile {
    display: block;
  }
  .item__details-right {
    width: 98%;
  }
  .item__listing-details--desktop {
    display: none;
  }
  .start__chat button {
    background: #d1d1d1;
    padding: 2.5%;
    border-radius: 998px;
    border: none;
    width: 45%;
    display: flex;
    justify-content: center;
  }
  .item__rent {
    justify-content: space-between;
  }
}

@media screen and (max-width: 500px) {
  .navbar-light .navbar-toggler {
    color: rgba(0, 0, 0, 0.5);
    border: 0.5px solid black !important;
    padding: 0.2rem 0.5rem !important;
  }

  .item__navbar{
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    align-items: center;
    background-color: green;
    padding: 1.5rem 1rem !important;
    position: relative;
  }

  .item__container{
    overflow: visible ;
  }

  .menu-button {
    background: none;
    border: none;
    font-size: 24px;
    cursor: pointer;
    position: relative;
  }

  .menu-icon {
    font-size: 20px;
    position: relative;
  }

  .navbar-toggler-icon {
    height: 25px !important;
    width: 25px !important;
  }

  .item__navbar-right {
    padding: 1rem 0 0;
  }

  .item__navbar-right h2{
    font-family: sans-serif;
    color: #000000;
    font-size: 12px;
    padding: 0;
    margin: 0.5rem 0 0;
  }

  .item__icons{
    padding-left: 0.2rem;
    margin: 0 0 0rem;
  }

  .item__nav-icon{
    margin-left: 0.5rem;
    margin-top: 0.2rem;
    font-size: 14px;
  }

  .item__overview {
    padding: 10px;
    margin: 10px;
  }

  .item__amenities {
    flex-direction: column;
    align-items: center;
  }

  .item__form label {
    display: flex;
    width: 150px;
    flex-direction: column;
  }
  
  .item__form input[type='date'] {
    border: 1px solid #ccc;
    margin-top: 2.5%;
    width: 90%;
  }

  .start__chat button {
    background: #d1d1d1;
    padding: 2.5%;
    border-radius: 998px;
    border: none;
    width: 80%;
    display: flex;
    justify-content: center;
    min-width: 150px;
    font-size: 12px;
  }
}

@media screen and (max-width: 340px) {
  .item__selector {
    width: 150px

  }
  .navbar-toggler-icon{
    width: 20px !important;
    width: 20px !important;
  }
}

